--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div>
-    <img src="D:/img/book.jpg" height="60px" width="100%px">
+    <img src="book.jpg" height="60px" width="100%px">
    </div> 
   <div class="shop" > 
   <button class="button">
@@ -61,13 +61,13 @@
     </button>
   </section>
   <div>
-    <img src="D:/img/book-1.jpg" height="60%px" width="100%px"
+    <img src="book-1.jpg" height="60%px" width="100%px"
   </div>
         <div class="nam">
           <h1>Books</h1>
                   <div class="skills-grid">
             <div class="skill">
-            <img src="D:/img/book-2.jpg" height="60%px"  width="100%px" >
+            <img src="book-2.jpg" height="60%px"  width="100%px" >
                       <br>  
               <h2> The Midnight 
                 Library</h2>
